# modorganizer-nxmhandler

./: CMakeLists.txt
include/nxmhandler/: addbinarydialog.h  handlerstorage.h  handlerwindow.h
src/: addbinarydialog.cpp  app_icon.rc  handlerstorage.cpp  handlerwindow.cpp  handlerwindow.ui  main.cpp
